--- a/public/about.html
+++ b/public/about.html
@@ -13,21 +13,17 @@
   <body>
   	<div class="container fluid text-center">
     	<div class="row">
-        	<div class="col">
-            	<img class="img-fluid" src="assets/images/reversi_logo.jpg" alt="Reversi logo" />
+        	<div class="col"><h2>About Reversi</h2>
             </div>
         </div>
         <div class="row">
         	<div class="col">
-            	<a href="name.html" class="btn btn-lg btn-secondary">Let's play!</a>
+			<p>Lorum ipsum</p>
             </div>
         </div>
         <div class="row">
-        	<img class="img-fluid" src="assets/images/reversi_logo_2.jpg" alt="Reversi logo 2" />
-        </div>
-        <div class="row">
         	<div class="col">
-        		<a href="about.html" class="btn btn-lg btn-info">About</a>
+        		<a href="index.html" class="btn btn-lg btn-info">Home</a>
             </div>
             <div class="col">
             	<a href="https://en.wikipedia.org/wiki/Reversi" class="btn btn-lg btn-info">Rules</a>
