--- a/public/name.html
+++ b/public/name.html
@@ -14,24 +14,9 @@
   	<div class="container fluid text-center">
     	<div class="row">
         	<div class="col">
-            	<img class="img-fluid" src="assets/images/reversi_logo.jpg" alt="Reversi logo" />
+		<h2>This is the name page</h2>
             </div>
         </div>
-        <div class="row">
-        	<div class="col">
-            	<a href="name.html" class="btn btn-lg btn-secondary">Let's play!</a>
-            </div>
-        </div>
-        <div class="row">
-        	<img class="img-fluid" src="assets/images/reversi_logo_2.jpg" alt="Reversi logo 2" />
-        </div>
-        <div class="row">
-        	<div class="col">
-        		<a href="about.html" class="btn btn-lg btn-info">About</a>
-            </div>
-            <div class="col">
-            	<a href="https://en.wikipedia.org/wiki/Reversi" class="btn btn-lg btn-info">Rules</a>
-       		</div>
        </div>
 
     <!-- Optional JavaScript -->
