Added functionality for lobby

--- a/public/name.html
+++ b/public/name.html
@@ -8,7 +8,7 @@
     <script>
     	function submitForm(){
         	var username = $('#username').val();
-            window.location.href = 'lobby.html?userrname='+username;
+            window.location.href = 'lobby.html?username='+username;
         }
     </script>
     
