--- a/public/lobby.html
+++ b/public/lobby.html
@@ -27,24 +27,22 @@
 		
 	</div>
 
+
         <div class='row'>
+        	<div class='col text-left'>
+            	<form class ='form-inline' onsubmit='send_message(); return false;'>
+                     <label for='send_message_holder' class='col-form-label sr-only'>Enter yout chat message</label>
+                    <input class='form-control mx-auto	w-75' type='text' value='' id='send_message_holder' placeholder='Enter your chat message'/>
+                    <button type='submit' class='btn btn-default btn-primary'>Send</button>
+             	</form>
+            </div>
+        </div>
+                <div class='row'>
                 <div class='col'>
                         <h3>Messages</h3>
                         	<div id='messages'>
                         	</div>
                 </div>
-        </div>
-        <div class='row'>
-        	<div class='col'>
-            	<form onsubmit='send_message(); return false;'>
-                
-                	<div class='form-group'>
-                      <label for='send_message_holder' class='col-form-label sr-only'>Enter yout chat message</label>
-                      <input class='form-control' type='text' value='' id='send_message_holder' placeholder='Enter your chat message'/>
-                    </div>
-                    <button type='submit' class='btn btn-default btn-primary'>Send</button>
-             	</form>
-            </div>
         </div>
         
        </div>
