--- a/public/game.html
+++ b/public/game.html
@@ -18,7 +18,7 @@
 							<h3 id='my_color'></h3>
 						</div>
 						<div class='col-2'>
-							<div id='my_color'></div>
+							<div id='quit'></div>
 						</div>
 					</div>
 					<div class='row'>
@@ -26,7 +26,7 @@
 							<span class='align-middle' id='whitesum'></span>
 							<img src='assets/images/image_grey.png' alt='white score' />
 							<img src='assets/images/image_blue.png' alt='black score' />
-							<span class='align-middle' id='whitesum'></span>
+							<span class='align-middle' id='blacksum'></span>
 						</div>
 					</div>
 					
