--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Reversi</title>
+    
   </head>
   <body>
   	<div class="container fluid text-center">
     	<div class="row">
         	<div class="col">
-            	<img class="img-fluid" src="assets/images/reversi_logo.jpg" alt="Reversi logo" />
+            	<img class="img-fluid" src="assets/images/reversi_header.png" alt="Reversi logo" />
             </div>
         </div>
         <div class="row">
@@ -23,7 +24,7 @@
             </div>
         </div>
         <div class="row">
-        	<img class="img-fluid" src="assets/images/reversi_logo_2.jpg" alt="Reversi logo 2" />
+        	<img class="img-fluid" src="assets/images/bc-anteater.jpg" alt="Reversi logo 2" />
         </div>
         <div class="row">
         	<div class="col">
